<resources>
    <string name="app_name" translatable="false">قاطِع|Qat3</string>
    <string name="scan_qr_amp_barcode_of_product"><![CDATA[Scan Barcode of product]]></string>
    <string name="product_checker">Product Checker</string>
    <string name="Products_Can_Buy">Products Can Buy</string>
    <string name="scan">Scan</string>
    <string name="camera">Camera</string>
    <string name="gallery">Gallery</string>
    <string name="boycott">Boycott:</string>
    <string name="organization_name">Org Name :</string>
    <string name="product_name">Product Name :</string>
    <string name="result">Result :</string>
    <string name="buy">You Can Buy it</string>
    <string name="dont_buy">DON\'T BUY IT</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="search">Search...</string>
    <string name="check_connection">Check Internet Connection</string>
    <string name="nodata">"No Data Founded"</string>
    <string name="storageper">storage permission is required</string>
    <string name="cameraper">camera and storage permission is required</string>
    <string name="cancelled">Cancelled</string>
    <string name="faildscann">Failed To Scanning </string>
    <string name="pickImage">Pick Image First ..</string>
    <string name="correctbar">Choose image with Barcode or Qr code</string>
    <string name="permession">this app need permission to get full and better experience with app and to check product code</string>
    <string name="permissionrequest">Permission Request</string>
    <string name="undifind">Undefined</string>
    <string name="tryscan">Scan another product</string>
    <string name="finish">Finish</string>
    <string name="nofounded">Cancelled</string>
    <string name="scanningcode">Scanning Barcode</string>
    <string name="select_language">Select Language</string>
    <string name="apply_changes">Apply Changes</string>

</resources>